[project]
name = "tenkai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
index = [
    "fastembed>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["agents"]
pythonpath = ["agents"]
addopts = "-v"
